# article_management

./: .gitignore  CMakeLists.txt  Code save.txt  Database.csv  Database_example.csv  editing_functions.c  editing_functions.h  file_functions.c  file_functions.h  general_functions.c  general_functions.h  main.c  network_functions.c  network_functions.h  store_functions.c  store_functions.h  user_interface.c  user_interface.h
